24 August 2020: Wouter
	- Fix that dnstap reconnects do not spam the log with the repeated
	  attempts.  Attempts on the timer are only logged on high verbosity,
	  if they produce a connection failure error.
	- Fix to apply chroot to dnstap-socket-path, if chroot is enabled.

20 August 2020: Ralph
	- Fix stats double count issue (#289).

13 August 2020: Ralph
	- Create and init edns tags data for libunbound.

10 August 2020: Ralph
	- Merge (modified) PR #277, use EVP_MAC_CTX_set_params if available,
	  by Vítězslav Čížek.

10 August 2020: Wouter
	- Fix #287: doc typo: "Additionaly".
	- Rerun autoconf

6 August 2020: Wouter
	- Merge PR #284 and Fix #246: Remove DLV entirely from Unbound.
	  The DLV has been decommisioned and in unbound 1.5.4, in 2015, there
	  was advise to stop using it.  The current code base does not contain
	  DLV code any more.  The use of dlv options displays a warning.

5 August 2020: Wouter
	- contrib/aaaa-filter-iterator.patch file renewed diff content to
	  apply cleanly to the current coderepo for the current code version.

5 August 2020: Ralph
	- Merge PR #272: Add EDNS client tag functionality.

4 August 2020: George
	- Improve error log message when inserting rpz RR.
	- Merge PR #280, Make tvOS & watchOS checks verify truthiness as well as
	  definedness, by Felipe Gasper.

4 August 2020: Wouter
	- Fix mini_event.h on OpenBSD cannot find fd_set.

31 July 2020: Wouter
	- Fix doxygen comment for no ssl for tls session ticket key callback
	  routine.

27 July 2020: George
	- Merge PR #268, draft-ietf-dnsop-serve-stale-10 has become RFC 8767 on
	  March 2020, by and0x000.

27 July 2020: Ralph
	- Merge PR #269, Fix python module len() implementations, by Torbjörn
	  Lönnemark

27 July 2020: Wouter
	- branch now named 1.11.1.  1.11.0rc1 became the 1.11.0 release.
	- Merge PR #270 from cgzones: munin plugin: always exit 0 in autoconf

20 July 2020: Wouter
	- Fix streamtcp to print packet data to stdout.  This makes the